...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="298dp"
        android:layout_height="59dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="57dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRecoverButton" />

    <EditText
        android:id="@+id/email"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="58dp"
        android:width="250dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
        android:autofillHints="Email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="58dp"
        android:width="250dp"
...
