...
        <item>Provider</item>
        <item>Receiver</item>
    </string-array>
    <string name="role_spinner_prompt">Select a Role</string>
    <string name="register_login_btn"><u>Login</u></string>
    <string name="firstName">First Name</string>
    <string name="email">Email</string>
    <string name="accountAlreadyMessage">Already have an account?</string>
    <string name="lastName">Last Name</string>
    <string name="roleSelectPrompt">Select a Role:</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="passwordRequirement">Password must be at least 6 characters.</string>
    <string name="login">Login</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginRegister">Register</string>
    <string name="passwordRecovery">Forgot Password</string>
...
        <item>New</item>
        <item>Used (Like New)</item>
        <item>Used (Very Good)</item>
        <item>Used (Good)</item>
        <item>Used (Acceptable)</item>
    </string-array>
    <string-array name="category">
        <item>Any</item>
        <item>Electronics</item>
        <item>Toys &amp; Games</item>
        <item>Sports &amp; Outdoors</item>
        <item>Vehicles &amp; Parts</item>
        <item>Furniture</item>
        <item>Clothing &amp; Accessories</item>
        <item>Musical Instruments</item>
    </string-array>
    <string name="condition">Product Condition:</string>
    <string name="location">Location</string>
    <string name="product_name">Product Name</string>
    <string name="exchange_preference">Exchange Preference</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">AIzaSyDqCJ4dSQzQX8lSTyIva4hWX-7lqqVFS_Y</string>
    <string name="confirm_location">Confirm Location</string>
...
