...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/submit_button"
        android:layout_width="117dp"
        android:layout_height="56dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="147dp"
        android:text="@string/submit"
...
